travel landing page setup

--- a/index.html
+++ b/index.html
@@ -4,50 +4,29 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <!-- CSS File  -->
-    <link rel="stylesheet" href="style.css" />
+
+    <!-- Bootstrap CSS n Js-->
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/js/bootstrap.min.js" />
+
     <!-- FontAwesome -->
-    <script
-      src="https://kit.fontawesome.com/1129ffda09.js"
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
       crossorigin="anonymous"
-    ></script>
+      referrerpolicy="no-referrer"
+    />
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <title>Travel Agency Landing Page</title>
   </head>
   <body>
-    <header class="header-area">
-      <div class="top-header-content">
-        <div class="first-half-area logo">
-          <!-- Logo Area -->
-          <a href="index.html"><img src="assets/logo.png" alt="Logo" /></a>
-        </div>
-        <div class="second-half-area">
-          <!-- Main Menu Area -->
-          <nav class="menu-area">
-            <ul>
-              <li><a href="#destinations">Destinations</a></li>
-              <li><a href="#hotels">Hotels</a></li>
-              <li><a href="#flights">Flights</a></li>
-              <li><a href="#bookings">Bookings</a></li>
-              <li><a href="#login">Login</a></li>
-              <li><a href="#signup">Sign Up</a></li>
-              <li>EN <i class="fas fa-solid fa-angle-down"></i></li>
-            </ul>
-          </nav>
-        </div>
-      </div>
-      <div class="header-body-content">
-        <div class="text-area">
-          <span>Best destination around in the world</span>
-          <h1>
-            Travel, enjoy <br />
-            live a new <br />
-            and full life
-          </h1>
-        </div>
-        <img src="assets/people.png" alt="people" />
-      </div>
-    </header>
-    <!-- JS File -->
-    <script src="script.js"></script>
+    <!-- Header Area  -->
+    <header class="header-top-area"></header>
+    <!-- Header Area End -->
+
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
