travel landing page setup v2

--- a/index.html
+++ b/index.html
@@ -24,8 +24,36 @@
   </head>
   <body>
     <!-- Header Area  -->
-    <header class="header-top-area"></header>
+    <header class="header-area"></header>
     <!-- Header Area End -->
+
+    <!-- Services Area  -->
+    <section class="services-area"></section>
+    <!-- Services Area End -->
+
+    <!-- Top Destination Area  -->
+    <section class="top-destination-area"></section>
+    <!-- Top Destination Area End -->
+
+    <!-- Booking Area  -->
+    <section class="booking-area"></section>
+    <!-- Booking Area End -->
+
+    <!-- Testimonial Area  -->
+    <section class="testimonial-area"></section>
+    <!-- Testimonial Area End -->
+
+    <!-- Client Area  -->
+    <section class="client-area"></section>
+    <!-- Client Area End -->
+
+    <!-- Subcription Area  -->
+    <section class="subcription-area"></section>
+    <!-- Subcription Area  -->
+
+    <!-- Footer Area  -->
+    <footer class="footer-main-area"></footer>
+    <!-- Footer Area End -->
 
     <script src="assets/js/script.js"></script>
   </body>
