--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS n Js-->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/js/bootstrap.min.js" />
+    <script src="assets/js/bootstrap.min.js"></script>
 
     <!-- FontAwesome -->
     <link
@@ -23,37 +23,80 @@
     <title>Travel Agency Landing Page</title>
   </head>
   <body>
-    <!-- Header Area  -->
-    <header class="header-area"></header>
-    <!-- Header Area End -->
+    <main>
+      <!-- Header Area  -->
+      <header class="header-area">
+        <div class="container-fluid">
+          <div class="row mt-3">
+            <div class="col-md-2">
+              <div class="logo">
+                <a href="index.html"
+                  ><img src="assets/img/logo.png" class="img-fluid" alt="logo"
+                /></a>
+              </div>
+            </div>
+            <div class="col-md-10">
+              <nav class="navbar-expand-lg">
+                <ul class="nav justify-content-end">
+                  <li class="nav-item">
+                    <a class="nav-link" href="#destination">Destination</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#hotels">Hotels</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#flights">Flights</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#bookings">Bookings</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#login">Login</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#signup">Sign Up</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#dropdown"
+                      >EN <i class="fa-solid fa-chevron-down"></i
+                    ></a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+        </div>
+      </header>
+      <!-- Header Area End -->
 
-    <!-- Services Area  -->
-    <section class="services-area"></section>
-    <!-- Services Area End -->
+      <!-- Services Area  -->
+      <section class="services-area"></section>
+      <!-- Services Area End -->
 
-    <!-- Top Destination Area  -->
-    <section class="top-destination-area"></section>
-    <!-- Top Destination Area End -->
+      <!-- Top Destination Area  -->
+      <section class="top-destination-area"></section>
+      <!-- Top Destination Area End -->
 
-    <!-- Booking Area  -->
-    <section class="booking-area"></section>
-    <!-- Booking Area End -->
+      <!-- Booking Area  -->
+      <section class="booking-area"></section>
+      <!-- Booking Area End -->
 
-    <!-- Testimonial Area  -->
-    <section class="testimonial-area"></section>
-    <!-- Testimonial Area End -->
+      <!-- Testimonial Area  -->
+      <section class="testimonial-area"></section>
+      <!-- Testimonial Area End -->
 
-    <!-- Client Area  -->
-    <section class="client-area"></section>
-    <!-- Client Area End -->
+      <!-- Client Area  -->
+      <section class="client-area"></section>
+      <!-- Client Area End -->
 
-    <!-- Subcription Area  -->
-    <section class="subcription-area"></section>
-    <!-- Subcription Area  -->
+      <!-- Subcription Area  -->
+      <section class="subcription-area"></section>
+      <!-- Subcription Area  -->
 
-    <!-- Footer Area  -->
-    <footer class="footer-main-area"></footer>
-    <!-- Footer Area End -->
+      <!-- Footer Area  -->
+      <footer class="footer-main-area"></footer>
+      <!-- Footer Area End -->
+    </main>
 
     <script src="assets/js/script.js"></script>
   </body>
