--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
     <!-- Bootstrap CSS n Js-->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-    <script src="assets/js/bootstrap.min.js"></script>
 
     <!-- FontAwesome -->
     <link
@@ -26,7 +25,7 @@
     <main>
       <!-- Header Area  -->
       <header class="header-area">
-        <div class="container-fluid">
+        <div class="container">
           <div class="row mt-3">
             <div class="col-md-2">
               <div class="logo">
@@ -65,6 +64,25 @@
               </nav>
             </div>
           </div>
+
+          <div class="row mt-5">
+            <div class="col-md-5 head-text">
+              <span>BEST DESTINATIONS AROUND THE WORLD</span>
+              <h1>
+                Travel, enjoy <br />
+                live a new <br />
+                and full life
+              </h1>
+              <p>
+                Built Wicket longer admire do barton vanity itself do in it.
+                Preferred to sportsmen it engrossed listening. Park gate sell
+                they west hard for the.
+              </p>
+            </div>
+            <div class="col-md-7 header-img">
+              <img src="assets/img/people.png" class="img-fluid" alt="people" />
+            </div>
+          </div>
         </div>
       </header>
       <!-- Header Area End -->
@@ -98,6 +116,8 @@
       <!-- Footer Area End -->
     </main>
 
+    <!-- Js file -->
+    <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/script.js"></script>
   </body>
 </html>
