--- a/index.html
+++ b/index.html
@@ -67,9 +67,19 @@
 
           <div class="row mt-5">
             <div class="col-md-5 head-text">
-              <span>BEST DESTINATIONS AROUND THE WORLD</span>
+              <span class="head-text-title"
+                >BEST DESTINATIONS AROUND THE WORLD</span
+              >
               <h1>
-                Travel, enjoy <br />
+                Travel,
+                <span class="text-rib"
+                  >enjoy
+                  <img
+                    src="assets/img/textline.png"
+                    class="decor-line"
+                    alt="decor-line"
+                /></span>
+                <br />
                 live a new <br />
                 and full life
               </h1>
