--- a/index.html
+++ b/index.html
@@ -81,8 +81,19 @@
                   Preferred to sportsmen it engrossed listening. Park gate sell
                   they west hard for the.
                 </p>
-              </div>
 
+                <div class="header__button">
+                  <div>
+                    <a href="#" class="find__button hero__btn">Find out more</a>
+                  </div>
+                  <div class="video_button">
+                    <a href="#" class="video__play play__btn"
+                      ><i class="fa-solid fa-play"></i
+                    ></a>
+                    <span> Play Demo</span>
+                  </div>
+                </div>
+              </div>
               <div class="hero-img">
                 <img src="assets/img/people.png" alt="people" />
               </div>
